--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -7,7 +7,11 @@ on:
     branches: [main]
 
 jobs:
-  Test:
+  test:
+    strategy:
+      matrix:
+        go-version: [1.16]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -15,7 +19,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16
+          go-version: ${{ matrix.go-version }}
 
       - name: Test
         run: go test -v ./...
